Increasing resources, jdk 17 needs more resources