@@ -15,7 +15,7 @@
         <maven.compiler.target>11</maven.compiler.target>
 
         <!-- Server settings -->
-        <jvm.args.memory>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</jvm.args.memory>
+        <jvm.args.memory>-Xms1024m -Xmx2048m </jvm.args.memory>
         <jvm.args.debug>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</jvm.args.debug>
         <jvm.args.other>-server</jvm.args.other>
 
